fix(css): set seek to live button's align-items prop to center (#6942)
Fixes https://github.com/videojs/themes/issues/7

--- a/src/css/components/_live.scss
+++ b/src/css/components/_live.scss
@@ -21,6 +21,7 @@
 
 // css for the new live ui below
 .video-js .vjs-seek-to-live-control {
+  align-items: center;
   cursor: pointer;
   @include flex(none);
   display: inline-flex;
